--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 			<p id='logo'>
 				Mobile<span style="color:#e22e25">4</span>Pro
 			</p>
+			<p id='email'>
+				mobile<span style="color:#e22e25">@</span>mobile4.pro
+			</p>
 		</header>
         <div id="background-container" class="background-container">
             <div id="background-output" class="background-output"></div>
@@ -22,7 +25,7 @@
 		
 		<article class = "content">
 			<h1>Mobile4 Pro</h1>
-			<h1 id="app"></h1>
+			<h3 id="app"></h3>
 		</article>
 		
         <footer>
